--- a/my_blog/posts/post_20240208/post_20240208.md
+++ b/my_blog/posts/post_20240208/post_20240208.md
@@ -1,8 +1,7 @@
 ---
-layout: base.njk
 title: Happy New Year
 post-date: February 8, 2024
-tags: post
+author: Shasha Liao
 ---
 ![My Image](Happy-New-Year-2024-Wallpaper-HD-free-fireworks-background-image.jpg)
 # Happy New Year
